--- a/numpy/concatenate_test.ipynb
+++ b/numpy/concatenate_test.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1,  2,  3,  4],\n",
+       "        [ 5,  6,  7,  8],\n",
+       "        [ 9, 10, 11, 12],\n",
+       "        [13, 14, 15, 16]],\n",
+       "\n",
+       "       [[17, 18, 19, 20],\n",
+       "        [21, 22, 23, 24],\n",
+       "        [ 2,  3,  4,  5],\n",
+       "        [14, 15, 16, 17]]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Concatenate cannot be replicated with any combination of flatten and reshape. F and F\n",
+    "# def sconc(t1, shape):\n",
+    "    \n",
+    "fl = np.concatenate([t1.flatten(order='A'), (t1[:, [0], :] + 1).flatten(order='A')], axis = 0)\n",
+    "fl.reshape([2, 4, 4], order='A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Attempting to reconstruct using other reshape methodologies\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 1,  2,  3,  4],\n",
+       "        [ 5,  6,  7,  8],\n",
+       "        [ 9, 10, 11, 12],\n",
+       "        [13, 14, 15, 16]],\n",
+       "\n",
+       "       [[17, 18, 19, 20],\n",
+       "        [21, 22, 23, 24],\n",
+       "        [ 2,  3,  4,  5],\n",
+       "        [14, 15, 16, 17]]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reshape is working the same way in both numpy and sport\n",
+    "fl.reshape([2, 4, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,10 +213,138 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1.1 , 1.2 , 1.3 ],\n",
+       "        [1.01, 1.02, 1.03]],\n",
+       "\n",
+       "       [[2.1 , 2.2 , 2.3 ],\n",
+       "        [2.01, 2.02, 2.03]]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test1 = np.array(\n",
+    "    [[[1.1, 1.2, 1.3],\n",
+    "      [1.01, 1.02, 1.03]],\n",
+    "     [[2.1, 2.2, 2.3],\n",
+    "      [2.01, 2.02, 2.03]]]\n",
+    ")\n",
+    "test1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[3.1, 3.2, 3.3]],\n",
+       "\n",
+       "       [[4.1, 4.2, 4.3]]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test2 = test1 + 2.\n",
+    "test2 = test2[:, [0], :]\n",
+    "test2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.1 , 1.2 , 1.3 , 1.01, 1.02, 1.03, 2.1 , 2.2 , 2.3 , 2.01, 2.02,\n",
+       "       2.03])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test1.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1.1 , 1.2 , 1.3 ],\n",
+       "        [1.01, 1.02, 1.03],\n",
+       "        [3.1 , 3.2 , 3.3 ]],\n",
+       "\n",
+       "       [[2.1 , 2.2 , 2.3 ],\n",
+       "        [2.01, 2.02, 2.03],\n",
+       "        [4.1 , 4.2 , 4.3 ]]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate([test1, test2], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "all the input array dimensions for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 2 and the array at index 1 has size 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-59-fa838b55e424>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtest1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: all the input array dimensions for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 2 and the array at index 1 has size 1"
+     ]
+    }
+   ],
+   "source": [
+    "np.concatenate([test1, test2], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# If we flatten then the t2 values will be at the end of the list, naturally.\n",
+    "# This would mean that these six cells end up as the final two elems of dim0: 1\n",
+    "# Because we are intending to add\n",
+    "# BThis would be avoided if we "
+   ]
   }
  ],
  "metadata": {
