Change test arraylikes

--- a/numpy/flatten_test.ipynb
+++ b/numpy/flatten_test.ipynb
@@ -18,9 +18,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.1, 0.2, 0.3, 0.4, 0.5],\n",
-       "       [1.1, 1.2, 1.3, 1.4, 1.5],\n",
-       "       [2.1, 2.2, 2.3, 2.4, 2.5]])"
+       "array([[0.  , 0.01, 0.02, 0.03, 0.04],\n",
+       "       [0.1 , 0.11, 0.12, 0.13, 0.14],\n",
+       "       [0.2 , 0.21, 0.22, 0.23, 0.24]])"
       ]
      },
      "execution_count": 2,
@@ -40,8 +40,8 @@
     {
      "data": {
       "text/plain": [
-       "array([0.1, 0.2, 0.3, 0.4, 0.5, 1.1, 1.2, 1.3, 1.4, 1.5, 2.1, 2.2, 2.3,\n",
-       "       2.4, 2.5])"
+       "array([0.  , 0.01, 0.02, 0.03, 0.04, 0.1 , 0.11, 0.12, 0.13, 0.14, 0.2 ,\n",
+       "       0.21, 0.22, 0.23, 0.24])"
       ]
      },
      "execution_count": 3,
@@ -56,18 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.1, 0.2, 0.3, 0.4, 0.5, 1.1, 1.2, 1.3, 1.4, 1.5, 2.1, 2.2, 2.3,\n",
-       "       2.4, 2.5, 3.1, 3.2, 3.3, 3.4, 3.5, 4.1, 4.2, 4.3, 4.4, 4.5, 5.1,\n",
-       "       5.2, 5.3, 5.4, 5.5])"
+       "array([0.   , 0.001, 0.002, 0.003, 0.004, 0.01 , 0.011, 0.012, 0.013,\n",
+       "       0.014, 0.02 , 0.021, 0.022, 0.023, 0.024, 0.1  , 0.101, 0.102,\n",
+       "       0.103, 0.104, 0.11 , 0.111, 0.112, 0.113, 0.114, 0.12 , 0.121,\n",
+       "       0.122, 0.123, 0.124])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
