--- a/numpy/transpose_check.ipynb
+++ b/numpy/transpose_check.ipynb
@@ -156,22 +156,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 5, 3)"
+       "array([[[0.   , 0.01 , 0.02 ],\n",
+       "        [0.001, 0.011, 0.021],\n",
+       "        [0.002, 0.012, 0.022],\n",
+       "        [0.003, 0.013, 0.023],\n",
+       "        [0.004, 0.014, 0.024]],\n",
+       "\n",
+       "       [[0.1  , 0.11 , 0.12 ],\n",
+       "        [0.101, 0.111, 0.121],\n",
+       "        [0.102, 0.112, 0.122],\n",
+       "        [0.103, 0.113, 0.123],\n",
+       "        [0.104, 0.114, 0.124]]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dbl3d.transpose(0,2,1).shape"
+    "dbl3d.transpose(0,2,1)"
    ]
   },
   {
